tests/tooling/fixtures/native/recovery/negative/negative_octal_literal_global_divide_by_zero.objc3
// Expected diagnostic code(s): O3S210.
module NegativeOctalLiteralGlobalDivideByZero;

let value = 0o10 / 0o0;

fn main() -> i32 {
  return value;
}
